good/src/main/java/com/example/sample/domain/model/Collidable.java
package com.example.sample.domain.model;

public interface Collidable {

  Collision getCollision();
}
