bad/src/main/java/com/example/sample/objects/BattleTechnique.java
package com.example.sample.objects;

public interface BattleTechnique {
}
